docs: Spectrum is drawn with LINPLOT not DISPLAY.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -3411,8 +3411,8 @@ override the text label size which is too big for these axes labels.
 \includegraphics[width=0.55\linewidth]{sc20_display3}
 \typeout{sc20_display3 inserted on page \arabic{page}}
 \label{fig:display3}
-\caption[Displaying a spectrum with \Kappa:\display.]{
-  Displaying a spectrum with \Kappa:\display.}
+\caption[Displaying a spectrum with \Kappa:\linplot.]{
+  Displaying a spectrum with \Kappa:\linplot.}
 \end{center}
 \end{figure}
 
@@ -3435,15 +3435,15 @@ data range. In additional \param{extended}, the available options are
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.55\linewidth]{sc20_display4}
+\includegraphics[width=0.5\linewidth]{sc20_display4}
 \typeout{sc20_display4 inserted on page \arabic{page}}
 \label{fig:display4}
-\caption[Displaying a zoomed-in spectrum with \Kappa:\display.]{
-  Displaying a zoomed-in spectrum with \Kappa:\display.}
+\caption[Displaying a zoomed-in spectrum with \Kappa:\linplot.]{
+  Displaying a zoomed-in spectrum with \Kappa:\linplot.}
 \end{center}
 \end{figure}
 
-\item To plot a second spectrum over this one, re-call \display\ but
+\item To plot a second spectrum over this one, re-call \linplot\ but
 with the \param{noclear} option to keep the original plot underneath.
 The formatting defaults to the last time \linplot\ was run, but with
 the one-off temporary change of setting the colour of the line to red.
@@ -3460,8 +3460,8 @@ The plus sign means the change will not be remembered next time
 \includegraphics[width=0.55\linewidth]{sc20_display5}
 \typeout{sc20_display5 inserted on page \arabic{page}}
 \label{fig:display5}
-\caption[Displaying two super-imposed spectra with \Kappa:\display.]{
-  Displaying two super-imposed spectra with \Kappa:\display.}
+\caption[Displaying two super-imposed spectra with \Kappa:\linplot.]{
+  Displaying two super-imposed spectra with \Kappa:\linplot.}
 \end{center}
 \end{figure}
 
@@ -3518,8 +3518,8 @@ axes.
 %\includegraphics[width=0.6\linewidth]{sc20_display6}
 %\typeout{sc20_display6 inserted on page \arabic{page}}
 %\label{fig:display6}
-%\caption[Displaying two super-imposed spectra with \Kappa:\display.]{
-%  Displaying two super-imposed spectra with \Kappa:\display.}
+%\caption[Displaying two super-imposed spectra with \Kappa:\linplot.]{
+%  Displaying two super-imposed spectra with \Kappa:\linplot.}
 %\end{center}
 %\end{figure}
 
@@ -3537,8 +3537,8 @@ axes.
 \includegraphics[width=0.8\linewidth]{sc20_display7}
 \typeout{sc20_display7 inserted on page \arabic{page}}
 \label{fig:display7}
-\caption[Displaying two super-imposed spectra with \Kappa:\display.]{Displaying two
-   super-imposed spectra with \Kappa:\display.}
+\caption[Displaying two super-imposed spectra with \Kappa:\linplot.]{Displaying two
+   super-imposed spectra with \Kappa:\linplot.}
 \end{center}
 \end{figure}
 
@@ -3553,8 +3553,8 @@ axes.
 \includegraphics[width=0.8\linewidth]{sc20_display8}
 \typeout{sc20_display8 inserted on page \arabic{page}}
 \label{fig:display8}
-\caption[Displaying two super-imposed spectra with \Kappa:\display.]{
-  Displaying two super-imposed spectra with \Kappa:\display.}
+\caption[Displaying two super-imposed spectra with \Kappa:\linplot.]{
+  Displaying two super-imposed spectra with \Kappa:\linplot.}
 \end{center}
 \end{figure}
 
