--- a/docs/sun/189/sun189.tex
+++ b/docs/sun/189/sun189.tex
@@ -1,257 +1,30 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[noabs,nolof,twoside,11pt]{starlink}
 
 % ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {189.3}
-\newcommand{\stardocauthors}   {Martin Clayton}
-\newcommand{\stardocdate}      {25 June 1996}
-\newcommand{\stardoctitle}     {ISPELL \sunspec{--}{-} Spelling Checker}
-\newcommand{\stardocversion}   {[software-version]}
-\newcommand{\stardocmanual}    {[manual-type]}
-\newcommand{\stardocabstract}  {[Text of abstract]}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {189.3}
+\stardocauthors     {Martin Clayton}
+\stardocdate        {25 June 1996}
+\stardoctitle       {ISPELL \sunspec{--}{-} Spelling Checker}
 % ? End of document identification
 
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document-specific \newcommand or \newenvironment commands.
-\newcommand{\sunspec}[2]{#1}
-\begin{htmlonly}
-\newcommand{\sunspec}[2]{#2}
-\end{htmlonly}
+% ? Document-specific \providecommand or \newenvironment commands.
+\providecommand{\sunspec}[2]{#1}
 
 % ? End of document-specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-%   {\LARGE\bf \stardocversion \\ [4ex]}
-%   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required.
-   \begin{center}
-   \leavevmode\includegraphics[height=100mm]{sun189_cover}
-   \end{center}
-% ? End of picture
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\bf Abstract}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-   \begin{figure}[h]
-   \includegraphics[height=100mm]{sun189_cover}
-   \end{figure}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-%\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-\newpage
-\begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \tableofcontents
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
-\end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
 
 \section{ISPELL in brief}
 
@@ -264,9 +37,9 @@ ISPELL is a screen-oriented spelling checker that shows errors in the context
 of the original file, and suggests possible corrections when it can figure
 them out.  The most common usage is
 
-\begin{verbatim}
-   % ispell filename
-\end{verbatim}
+\begin{terminalv}
+% ispell filename
+\end{terminalv}
 
 In this case, ISPELL will display each word which does not appear in the
 dictionary at the top of the screen and allow you to change it.
@@ -296,9 +69,9 @@ entering its interactive mode.
 Most of the information in this document can be accessed on the ISPELL man page
 by typing
 
-\begin{verbatim}
-   % man ispell
-\end{verbatim}
+\begin{terminalv}
+% man ispell
+\end{terminalv}
 
 There follows a complete list of the interactive commands available when
 checking a document with ISPELL, and command-line options. A brief description
@@ -312,142 +85,79 @@ case of the commands is ignored.
 
 Commands are as follows:
 
-\begin{latexonly}
 \begin{tabular}{ll}
 Command & Description \\ \hline
-{\tt ?    } & Display the help screen.\\
-{\tt 0-n  } & Replace with one of the suggested words.\\
-{\tt A    } & Accept the word for the rest of this ISPELL session.\\
-{\tt I    } & Accept the word, capitalized as it is in the file, and update\\
+\texttt{?    } & Display the help screen.\\
+\texttt{0-n  } & Replace with one of the suggested words.\\
+\texttt{A    } & Accept the word for the rest of this ISPELL session.\\
+\texttt{I    } & Accept the word, capitalized as it is in the file, and update\\
             & the private dictionary.\\
-{\tt L    } & Look up words in system dictionary.\\
-{\tt Q    } & Exit immediately and leave the file unchanged.\\
-{\tt R    } & Replace the misspelled word completely.\\
+\texttt{L    } & Look up words in system dictionary.\\
+\texttt{Q    } & Exit immediately and leave the file unchanged.\\
+\texttt{R    } & Replace the misspelled word completely.\\
 space       & Accept the word this time only.\\
-{\tt U    } & Accept the word, and add an uncapitalised (actually, all
+\texttt{U    } & Accept the word, and add an uncapitalised (actually, all
               lower-case)\\
             & version to the private dictionary.\\
-{\tt X    } & Write the rest of this file, ignoring misspellings, and start the
+\texttt{X    } & Write the rest of this file, ignoring misspellings, and start the
               next file.\\
-{\tt !    } & Shell escape.\\
+\texttt{!    } & Shell escape.\\
 ctrl-L      & Redraw screen.\\
 ctrl-Z      & Suspend ispell.\\
 \end{tabular}
-\end{latexonly}
-\begin{htmlonly}
-\begin{rawhtml}
-<PRE>
-<B>Command   Description</B>
-?         Display the help screen.
-0-n       Replace with one of the suggested words.
-A         Accept the word for the rest of this ISPELL session.
-I         Accept the word, capitalized as it is in the file, and
-          update the private dictionary.
-L         Look up words in system dictionary.
-Q         Exit immediately and leave the file unchanged.
-R         Replace the misspelled word completely.
-space     Accept the word this time only.
-U         Accept the word, and add an uncapitalised (actually, all
-          lower-case) version to the private dictionary.
-X         Write the rest of this file, ignoring misspellings, and
-          start the next file.
-!         Shell escape.
-ctrl-L    Redraw screen.
-ctrl-Z    Suspend ispell.
-</PRE>
-\end{rawhtml}
-\end{htmlonly}
 
 \section{Command line arguments}
 
 In brief, the available command-line arguments are:
 
-\begin{latexonly}
 \begin{tabular}{ll}
 Argument & Description \\ \hline
-{\tt -M       } & Display a one-line mini-menu in interactive mode.\\
-{\tt -N       } & Do not display a one-line mini-menu in interactive mode.\\
-{\tt -Ln      } & Display \verb+n+ lines of context in interactive mode.\\
+\texttt{-M       } & Display a one-line mini-menu in interactive mode.\\
+\texttt{-N       } & Do not display a one-line mini-menu in interactive mode.\\
+\texttt{-Ln      } & Display \verb+n+ lines of context in interactive mode.\\
 
-{\tt -b       } & Create a backup file by appending \verb+.bak+ to the name of
+\texttt{-b       } & Create a backup file by appending \verb+.bak+ to the name of
                   the input file.\\
-{\tt -x       } & Don't create a backup file.\\
+\texttt{-x       } & Don't create a backup file.\\
 
-{\tt -t       } & The input file is in \TeX\ or \LaTeX\ format.\\
-{\tt -n       } & The input file is in nroff/troff format.\\
+\texttt{-t       } & The input file is in \TeX\ or \LaTeX\ format.\\
+\texttt{-n       } & The input file is in nroff/troff format.\\
 
-{\tt -B       } & Report run-together words with missing blanks as spelling
+\texttt{-B       } & Report run-together words with missing blanks as spelling
                   errors.\\
-{\tt -C       } & Consider run-together words as legal compounds.\\
+\texttt{-C       } & Consider run-together words as legal compounds.\\
 
-{\tt -P       } & Don't generate extra root/affix combinations.\\
-{\tt -m       } & Make possible root/affix combinations that aren't in the
+\texttt{-P       } & Don't generate extra root/affix combinations.\\
+\texttt{-m       } & Make possible root/affix combinations that aren't in the
                   dictionary.\\
 
-{\tt -s       } & Sort the list of guesses by probable correctness.\\
-{\tt -d file  } & Specify an alternate dictionary \verb+file+\@.\\
-{\tt -p file  } & Specify an alternate personal dictionary \verb+file+\@.\\
-{\tt -w chars } & Specify additional characters \verb+chars+ that can be part
+\texttt{-s       } & Sort the list of guesses by probable correctness.\\
+\texttt{-d file  } & Specify an alternate dictionary \verb+file+\@.\\
+\texttt{-p file  } & Specify an alternate personal dictionary \verb+file+\@.\\
+\texttt{-w chars } & Specify additional characters \verb+chars+ that can be part
                   of a word.\\
-{\tt -W n     } & Specify length \verb+n+ of words that are always legal.\\
-{\tt -T type  } & Assume a given formatter type for all files.\\
+\texttt{-W n     } & Specify length \verb+n+ of words that are always legal.\\
+\texttt{-T type  } & Assume a given formatter type for all files.\\
 
-{\tt -V       } & Display non-printing characters in \verb+cat -v+ style.\\
-{\tt -l       } & Produce a list of misspelled words from the standard input.\\
+\texttt{-V       } & Display non-printing characters in \verb+cat -v+ style.\\
+\texttt{-l       } & Produce a list of misspelled words from the standard input.\\
 
-{\tt -a       } & Run ISPELL in a pipe.\\
-{\tt -A       } & As \verb+-a+ with nested file capability.\\
-{\tt -f file  } & Write output to \verb+file+ (valid with \verb+-A+ and
+\texttt{-a       } & Run ISPELL in a pipe.\\
+\texttt{-A       } & As \verb+-a+ with nested file capability.\\
+\texttt{-f file  } & Write output to \verb+file+ (valid with \verb+-A+ and
                   \verb+-a+ only).\\
 
-{\tt -v       } & Display version ID and licence then exit.\\
-{\tt -vv      } & Display version ID, licence and compilation options then
+\texttt{-v       } & Display version ID and licence then exit.\\
+\texttt{-vv      } & Display version ID, licence and compilation options then
                   exit.\\
 \end{tabular}
-\end{latexonly}
-
-\begin{htmlonly}
-\begin{rawhtml}
-<PRE>
-<B>Argument  Description</B>
--M        Display a one-line mini-menu in interactive mode.
--N        Do not display a one-line mini-menu in interactive mode.
--Ln       Display <B>n</B> lines of context in interactive mode.
--b        Create a backup file by appending <B>.bak</B> to the
-          name of the input file.
--x        Don't create a backup file.
--t        The input file is in TeX or LaTeX format.
--n        The input file is in nroff/troff format.
--B        Report run-together words with missing blanks as
-          spelling errors.
--C        Consider run-together words as legal compounds.
--P        Don't generate extra root/affix combinations.
--m        Make possible root/affix combinations that aren't in
-          the dictionary.
--s        Sort the list of guesses by probable correctness.
--d file   Specify an alternate dictionary <B>file</B>.
--p file   Specify an alternate personal dictionary <B>file</B>.
--w chars  Specify additional characters <B>chars</B> that can be part of
-          a word.
--W n      Specify length <B>n</B> of words that are always legal.
--T type   Assume a given formatter <B>type</B> for all files.
--V        Display non-printing characters in `cat -v' style.
--l        Produce a list of misspelled words from the standard input.
--a        Run ISPELL in a pipe.
--A        As -a with nested file capability.
--f file   Write output to <B>file</B> (valid with <B>-A</B> and <B>-a</B> only).
--v        Display version ID and licence then exit.
--vv       Display version ID, licence and compilation options then exit.
-</PRE>
-\end{rawhtml}
-\end{htmlonly}
 
 And in a little more detail:
 
 \begin{itemize}
 \item {\Large\tt -M} \\
 If the \verb+-M+ switch is specified, a one-line mini-menu at the bottom of the
-screen will summarize these options. By default the menu {\bf is} displayed.
+screen will summarize these options. By default the menu \textbf{is} displayed.
 
 \item {\Large\tt -N} \\
 The \verb+-N+ switch may be used to suppress the one-line mini-menu.
@@ -463,7 +173,7 @@ it depends how many lines your terminal will display.
 The \verb+-b+ option forces ispell to leave a backup \verb+.bak+ file for each
 input file.
 The \verb+.bak+ file contains the pre-corrected text.
-A backup file {\bf is} left by default.
+A backup file \textbf{is} left by default.
 
 \item {\Large\tt -x} \\
 The \verb+-x+ option suppresses the retention of the \verb+.bak+ files.
@@ -475,7 +185,7 @@ The \verb+-n+ and \verb+-t+ options select whether ISPELL runs in nroff/troff
 (\verb+-n+) or \TeX /\LaTeX\ (\verb+-t+) input mode.
 \TeX /\LaTeX\ mode is automatically selected if an input file has the extension
 \verb+.tex+, unless overridden by the -n switch.
-Files with extensions other than \verb+.tex+ will be assumed to {\bf not} be in
+Files with extensions other than \verb+.tex+ will be assumed to \textbf{not} be in
 \TeX\ or \LaTeX\ format.
 In \TeX /\LaTeX\ mode, whenever a backslash (``\verb+\+'') is found, ISPELL
 will skip to the next whitespace or \TeX /\LaTeX\ delimiter.
@@ -485,9 +195,9 @@ arbitrary, non-word arguments.
 Spell checking is also suppressed when in math mode.
 Thus, for example, given
 
-\begin{verbatim}
-   \chapter {This is a Ckapter} \cite{SCH86}
-\end{verbatim}
+\begin{terminalv}
+\chapter {This is a Ckapter} \cite{SCH86}
+\end{terminalv}
 
 ISPELL will find \verb+Ckapter+ but not \verb+SCH+\@.
 The \verb+-t+ option does not recognize the \TeX\ comment character \verb+%+,
@@ -509,7 +219,7 @@ replacements.
 If \verb+-C+ is specified, run-together words will be considered to be legal
 compounds, so long as both components are in the dictionary, and each component
 is at least as long as a language-dependent minimum (3 characters, by default).
-By default compound words {\bf are} considered as {\bf errors.}
+By default compound words \textbf{are} considered as \textbf{errors.}
 This is useful for languages such as German and Norwegian, where many compound
 words are formed by concatenation.
 (Note that compounds formed from three or more root words will still be
@@ -562,7 +272,7 @@ called \verb+.ispell_english+ if you are also using your own non-english
 disctionaries.
 If none of these conditions are met, the file \verb+.ispell_words+ is used.
 
-If the \verb+-p+ option is {\bf not} specified, ISPELL will look for personal
+If the \verb+-p+ option is \textbf{not} specified, ISPELL will look for personal
 dictionaries in both the current directory and the home directory.
 If dictionaries exist in both places, they will be merged.
 If any words are added to the personal dictionary, they will be written to the
@@ -590,9 +300,9 @@ characters following are a DECIMAL code 0\sunspec{--}{-}255, for the character.
 For example, to include bells and form feeds in your words (an admittedly silly
 thing to do, but aren't most pedagogical examples):
 
-\begin{verbatim}
-   n007n012
-\end{verbatim}
+\begin{terminalv}
+n007n012
+\end{terminalv}
 
 Numeric digits other than the three following \verb+n+ are simply numeric
 characters.  Use of \verb+n+ does not conflict with anything because actual
@@ -657,9 +367,9 @@ If there are no near misses at all, the line format is the same, except that
 the \verb+&+ is replaced by \verb+?+ (and the near-miss count is always zero).
 The suggested derivations following the near misses are in the form:
 
-\begin{verbatim}
-   [prefix+] root [-prefix] [-suffix] [+suffix]
-\end{verbatim}
+\begin{terminalv}
+[prefix+] root [-prefix] [-suffix] [+suffix]
+\end{terminalv}
 
 ({\it{e.g.,}}\ \verb=re+fry-y+ies= to get \verb+refries+) where each optional
 prefix and suffix is a string.
@@ -693,17 +403,17 @@ These output lines can be summarized as follows:
 For example, a dummy dictionary containing the words ``fray'', ``Frey'',
 ``fry'', and ``refried'' to the command
 
-\begin{verbatim}
-   echo frqy refries | ispell -a -m -d ./test.hash
-\end{verbatim}
+\begin{terminalv}
+echo frqy refries | ispell -a -m -d ./test.hash
+\end{terminalv}
 
 might produce the following:
 
-\begin{verbatim}
-   (#) International Ispell Version 3.1.13 11/20/94
-   & frqy 3 0: fray, Frey, fry
-   & refries 1 5: refried, re+fry-y+ies
-\end{verbatim}
+\begin{terminalv}
+(#) International Ispell Version 3.1.13 11/20/94
+& frqy 3 0: fray, Frey, fry
+& refries 1 5: refried, re+fry-y+ies
+\end{terminalv}
 
 This mode is also suitable for interactive use when you want to figure out
 the spelling of a single word.
@@ -730,7 +440,7 @@ that formatter.
 A line consisting solely of a \verb-+- will place ISPELL in \TeX /\LaTeX\ mode
 (similar to the \verb+-t+ option) and \verb+-+ returns ISPELL to nroff/troff
 mode (but these commands are obsolete).
-However, string character type is {\bf not} changed; the \verb+~+ command
+However, string character type is \textbf{not} changed; the \verb+~+ command
 must be used to do this.
 A line starting with \verb+~+ causes ISPELL to set internal parameters (in
 particular, the default string character type) based on the filename given in
@@ -738,10 +448,10 @@ the rest of the line.
 (A file suffix is sufficient, but the period must be included.
 Instead of a file name or suffix, a unique name, as listed in the language
 affix file, may be specified.)
-However, the formatter parsing is {\bf not} changed; the \verb-+- command must
+However, the formatter parsing is \textbf{not} changed; the \verb-+- command must
 be used to change the formatter.
 A line prefixed with \verb+#+ will cause the personal dictionary to be saved.
-A line prefixed with \verb+!+ will turn on {\bf terse} mode (see below), and
+A line prefixed with \verb+!+ will turn on \textbf{terse} mode (see below), and
 a line prefixed with \verb+%+ will return ISPELL to normal (non-terse) mode.
 Any input following the prefix characters \verb=+-#!=, or \verb+%+ is ignored,
 as is any input following the filename on a \verb+~+ line.
@@ -790,7 +500,7 @@ options that it was compiled with.
 
 The dictionary that comes with the Starlink release of ISPELL is a combination
 of the off-the-shelf British-English dictionary that comes with ISPELL and the
-dictionary used with the VMS SPELL program.  It {\em should} contain no errors
+dictionary used with the VMS SPELL program.  It \emph{should} contain no errors
 as both source dictionaries are quite mature and have been hand checked.
 
 \section{Author's copyright notice}
