--- a/docs/sun/201/sun201.tex
+++ b/docs/sun/201/sun201.tex
@@ -1,237 +1,28 @@
-\documentclass[twoside,11pt]{article}
-\pagestyle{myheadings}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {201.1}
-\newcommand{\stardocauthors}   {M J Bly}
-\newcommand{\stardocdate}      {9 October 1995}
-\newcommand{\stardoctitle}     {LATEX2HTML\\[1ex]
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {201.1}
+\stardocauthors     {M J Bly}
+\stardocdate        {9 October 1995}
+\stardoctitle     {LATEX2HTML\\[1ex]
                                 \LaTeX\ to HTML converter}
-\newcommand{\stardocabstract}  {LATEX2HTML converts \LaTeX\ source files
+\stardocabstract  {LATEX2HTML converts \LaTeX\ source files
 into a set of HTML files, suitable for browsing on the World Wide Web.
 It is used by STAR2HTML, which is the preferred program to use for
 converting Starlink documents to hypertext form.}
 % ? End of document identification
-
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document-specific \newcommand or \newenvironment commands.
+% ? Document-specific \providecommand or \newenvironment commands.
 % ? End of document-specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-\newpage
-\begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \tableofcontents
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
-\end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section{Introduction\xlabel{introduction}}
 
@@ -241,15 +32,14 @@ into a set of Hypertext Markup Language (HTML) files, suitable for browsing
 with WWW browsers.
 
 \begin{quote}
-{\em The Starlink documentation is not processed directly by LATEX2HTML,
+\emph{The Starlink documentation is not processed directly by LATEX2HTML,
 since it uses a series of additional macros to allow inter-document
 cross referencing within the Starlink document collection.  Instead,
 the STAR2HTML package should be used, see \xref{SUN/199}{sun199}{} for details.}
 \end{quote}
 
 In addition to the LATEX2HTML processor itself, this software uses
-GIFTRANS, the PBMPLUS utilities, GHOSTSCRIPT, and \LaTeX\ and the {\tt
-dvips} processor.  LATEX2HTML also requires PERL.
+GIFTRANS, the PBMPLUS utilities, GHOSTSCRIPT, and \LaTeX\ and the \texttt{dvips} processor.  LATEX2HTML also requires PERL.
 
 \TeX/\LaTeX, PERL and GHOSTSCRIPT are independent parts of the base set
 of software required at Starlink sites.  Thus the LATEX2HTML set provided for
@@ -257,12 +47,12 @@ Starlink use consists of:
 
 \begin{itemize}
 
-\item {\tt latex2html95} --- the actual processor;
+\item \texttt{latex2html95} --- the actual processor;
 
-\item {\tt giftrans} --- a utility for making the backgrounds of GIF
+\item \texttt{giftrans} --- a utility for making the backgrounds of GIF
 images transparent
 
-\item {\tt pbmplus} --- a widely used set of image conversion tools.
+\item \texttt{pbmplus} --- a widely used set of image conversion tools.
 
 \end{itemize}
 
@@ -276,25 +66,25 @@ LATEX2HTML can be used to make HTML versions of \LaTeX\ source.
 
 To process a latex source file into HTML equivalent files, you should first
 process your document with \LaTeX\ such that all the internal references are
-resolved, to produce an {\tt .aux} file.  LATEX2HTML will do a more complete
-job if the {\tt .aux} file exists.
+resolved, to produce an \texttt{.aux} file.  LATEX2HTML will do a more complete
+job if the \texttt{.aux} file exists.
 
 You should also ensure that you have present any extra source files needed
-{\em e.g.}, PostScript figures, as these will be processed too.
+\emph{e.g.}, PostScript figures, as these will be processed too.
 
 Then you should invoke LATEX2HTML on your document, giving the complete file
 name for the \LaTeX\ source, as follows:
 
 \begin{quote}
-{\tt \% latex2html} {\it mydoc.tex}
+\texttt{\% latex2html} \textit{mydoc.tex}
 \end{quote}
 
-where {\tt \%} is the shell prompt and {\it mydoc.tex} is your
+where \texttt{\%} is the shell prompt and \textit{mydoc.tex} is your
 \LaTeX\ source file.
 
-LATEX2HTML will then process your document to create a directory {\tt mydoc}
+LATEX2HTML will then process your document to create a directory \texttt{mydoc}
 of HTML files which are the separate elements (sections, subsections
-{\em etc.,}) of your document.
+\emph{etc.,}) of your document.
 
 If you make any modifications to your document source, you will need to
 reprocess it to create new HTML files.  You will not need to reprocess
@@ -302,12 +92,12 @@ any included graphics files unless you change their contents.  A second
 run of LATEX2HTML on the same source text will not redo the graphics.
 
 To cause a complete reprocessing, you should delete the contents of the
-{\tt mydoc} directory.
+\texttt{mydoc} directory.
 
 \subsection{Viewing the HTML version\xlabel{viewing_the_html_version}}
 
-The key file of the set produced by LATEX2HTML in the {\tt mydoc}
-directory is the file {\tt mydoc.html}.  This is the `Title Page' of
+The key file of the set produced by LATEX2HTML in the \texttt{mydoc}
+directory is the file \texttt{mydoc.html}.  This is the `Title Page' of
 your document, and contains the contents list of sections which are
 hyperlinks to the other files which make up the whole document.
 
@@ -315,10 +105,10 @@ To view your processed document, you should point your favourite WWW
 browser at it.  For example:
 
 \begin{quote}
-{\tt \% Mosaic} {\it mydoc/mydoc.html}
+\texttt{\% Mosaic} \textit{mydoc/mydoc.html}
 \end{quote}
 
-will use {\tt Mosaic} to display the `Title Page' of your document.
+will use \texttt{Mosaic} to display the `Title Page' of your document.
 
 You should be aware that most WWW browsers use some sort of caching
 system for pages they have displayed.  If you make changes to your
@@ -333,20 +123,19 @@ There is a manual for LATEX2HTML.  This has been issued as a Starlink
 Miscellaneous User Document, MUD/152.  Your site manager should be able
 to provide you with a paper copy.
 
-Alternatively, you can find the source for it online in the {\tt docs}
+Alternatively, you can find the source for it online in the \texttt{docs}
 subdirectory of the LATEX2HTML home directory.  On Starlink systems,
-the LATEX2HTML home directory is likely to be {\tt
-/star/\-local/latex2html/latex2html95}.
+the LATEX2HTML home directory is likely to be \texttt{/star/\-local/latex2html/latex2html95}.
 
 There is also a hypertext version of the same manual, created using
-LATEX2HTML.  This is in the {\tt docs/manual} subdirectory of the
+LATEX2HTML.  This is in the \texttt{docs/manual} subdirectory of the
 LATEX2HTML home directory.
 
 The URL is:
 
 \begin{quote}
 {\small
-{\tt file:/localhost/star/local/latex2html/latex2html95/docs/manual/manual.html}
+\texttt{file:/localhost/star/local/latex2html/latex2html95/docs/manual/manual.html}
 }
 \end{quote}
 
@@ -355,10 +144,10 @@ The URL for the
 {http://www.starlink.ac.uk/star/local/latex2html/latex2html95/docs/manual/manual.html}
 is:
 
-{\small
-\begin{verbatim}
-http://www.starlink.ac.uk/star/local/latex2html/latex2html95/docs/manual/manual.html
-\end{verbatim}
-}
+\begin{footnotesize}
+\begin{quote}
+\url{http://www.starlink.ac.uk/star/local/latex2html/latex2html95/docs/manual/manual.html}
+\end{quote}
+\end{footnotesize}
 
 \end{document}
